--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MySample</string>
     <string name="camera_sample">自定义相机示例</string>
+    <string name="surface_game">SurfaceViewGame</string>
+    <string name="game_matrix">俄罗斯方块</string>
 </resources>
